Fix: Improve donation form modal on mobile (#8206)

--- a/src/Campaigns/Blocks/shared/components/ModalForm/styles.scss
+++ b/src/Campaigns/Blocks/shared/components/ModalForm/styles.scss
@@ -33,7 +33,7 @@
         top: 0;
         left: 0;
         width: 100vw;
-        height: var(--visual-viewport-height);
+        height: 100dvh;
         background: rgba(0 0 0 / .7);
         display: flex;
         flex-direction: column;
